v1.1.0/modules/schema/pages/class/Specimen.adoc
= `Specimen`
:toclevels: 4


+++Sample or specimen of a material (fluid or solid).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Specimen`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Specimen`*
 *** xref::class/OilSpecimen.adoc[`OilSpecimen`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AssetTestSampleTaker,`AssetTestSampleTaker`>>
//| [[slots_table.AssetTestSampleTaker]]<<AssetTestSampleTaker,`AssetTestSampleTaker`>>
| 0..1 +
xref::class/AssetTestSampleTaker.adoc[`AssetTestSampleTaker`]
| +++Test sampler taker who gathered this specimen.+++
| _n/a_

| <<LabTestDataSet,`LabTestDataSet`>>
//| [[slots_table.LabTestDataSet]]<<LabTestDataSet,`LabTestDataSet`>>
| 0..* +
xref::class/LabTestDataSet.adoc[`LabTestDataSet`]
| +++Results from lab testing done on specimen.+++
| _n/a_

| <<ambientTemperatureAtSampling,`ambientTemperatureAtSampling`>>
//| [[slots_table.ambientTemperatureAtSampling]]<<ambientTemperatureAtSampling,`ambientTemperatureAtSampling`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Operating ambient temperature (in °C).+++
| _n/a_

| <<humidityAtSampling,`humidityAtSampling`>>
//| [[slots_table.humidityAtSampling]]<<humidityAtSampling,`humidityAtSampling`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Operating ambient humidity (in percent).+++
| _n/a_

| <<specimenID,`specimenID`>>
//| [[slots_table.specimenID]]<<specimenID,`specimenID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Identifier of specimen used in inspection or test.+++
| _n/a_

| <<specimenSampleDateTime,`specimenSampleDateTime`>>
//| [[slots_table.specimenSampleDateTime]]<<specimenSampleDateTime,`specimenSampleDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time sample specimen taken.+++
| _n/a_

| <<specimenToLabDateTime,`specimenToLabDateTime`>>
//| [[slots_table.specimenToLabDateTime]]<<specimenToLabDateTime,`specimenToLabDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time the specimen was received by the lab.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#ambientTemperatureAtSampling]
=== `ambientTemperatureAtSampling`
+++Operating ambient temperature (in °C).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.ambientTemperatureAtSampling`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.ambientTemperatureAtSampling,&#10548;>>
--
////


//[discrete]
[#AssetTestSampleTaker]
=== `AssetTestSampleTaker`
+++Test sampler taker who gathered this specimen.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.AssetTestSampleTaker`
| Cardinality
| 0..1
| Type
| xref::class/AssetTestSampleTaker.adoc[`AssetTestSampleTaker`]


|===

////
[.text-left]
--
<<slots_table.AssetTestSampleTaker,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#humidityAtSampling]
=== `humidityAtSampling`
+++Operating ambient humidity (in percent).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.humidityAtSampling`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.humidityAtSampling,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#LabTestDataSet]
=== `LabTestDataSet`
+++Results from lab testing done on specimen.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.LabTestDataSet`
| Cardinality
| 0..*
| Type
| xref::class/LabTestDataSet.adoc[`LabTestDataSet`]


|===

////
[.text-left]
--
<<slots_table.LabTestDataSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#specimenID]
=== `specimenID`
+++Identifier of specimen used in inspection or test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.specimenID,&#10548;>>
--
////


//[discrete]
[#specimenSampleDateTime]
=== `specimenSampleDateTime`
+++Date and time sample specimen taken.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenSampleDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.specimenSampleDateTime,&#10548;>>
--
////


//[discrete]
[#specimenToLabDateTime]
=== `specimenToLabDateTime`
+++Date and time the specimen was received by the lab.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenToLabDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.specimenToLabDateTime,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AssetTestSampleTaker.adoc[`AssetTestSampleTaker`] | xref::class/AssetTestSampleTaker.adoc#Specimen[`Specimen`]



| xref::class/LabTestDataSet.adoc[`LabTestDataSet`] | xref::class/LabTestDataSet.adoc#Specimen[`Specimen`]


|===

